Closed Bug 1710757 Opened 4 years ago Closed 4 years ago

baseprofiler/core/ProfileBufferEntry.cpp#627 : printf("%#llx") doesn't output "0x<number>" anymore

Categories

(Core :: Gecko Profiler, defect, P1)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- wontfix
firefox89 --- fixed
firefox90 --- fixed

People

(Reporter: mozbugz, Assigned: mozbugz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This makes baseprofiler native stacks look like "%#llx" without address.

Actually, '#' was valid, and allowed "alternative" representations, in this case it used to add the "0x" prefix.
But I won't chase what happened with printf. I'll just remove '#' and add the explicit "0x", it Works For Me™.

Before: https://share.firefox.dev/2RaSPcZ (shows "%#llx")
Without '#': https://share.firefox.dev/2RaSPcZ (shows naked addresses)
With "0x": https://share.firefox.dev/3y3uwhz (shows function names) 🎉

Summary: Typo in baseprofiler/core/ProfileBufferEntry.cpp#627 : printf("%#llx"), remove '#' → baseprofiler/core/ProfileBufferEntry.cpp#627 : printf("%#llx") doesn't output "0x<number>" anymore
Has Regression Range: --- → yes
Pushed by gsquelart@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/441223763635 Fix baseprofiler native-frame output - r=florian

Set release status flags based on info from the regressing bug 1690167

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Comment on attachment 9221469 [details]
Bug 1710757 - Fix baseprofiler native-frame output - r?florian

Beta/Release Uplift Approval Request

  • User impact if declined: Users of the Firefox Profiler will get less-useful startup profiles.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Not risky: It's only changing a printf format argument.
  • String changes made/needed:
Attachment #9221469 - Flags: approval-mozilla-beta?

(In reply to Gerald Squelart [:gerald] (he/him) from comment #7)

  • Is this code covered by automated tests?: No

To be more precise: We have automated tests that run this code, so I'm confident it doesn't crash or makes profiles worse, but the tests don't check for the exact output of this line -- Which is why we didn't catch the regression.

Comment on attachment 9221469 [details]
Bug 1710757 - Fix baseprofiler native-frame output - r?florian

Approved for 89.0b12.

Attachment #9221469 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: